fix initial popper misplacement and flicker. update stories.

--- a/packages/tour-kit/src/styles.scss
+++ b/packages/tour-kit/src/styles.scss
@@ -1,3 +1,11 @@
+.tour-kit-frame {
+    visibility: hidden;
+
+    &.--visible {
+        visibility: visible;
+    }
+}
+
 .tour-kit-frame__container {
 	border-radius: 2px;
 	bottom: 44px;
